[package]
name = "heapp"
version = "0.1.0"
edition = "2018"
description = "Some heap operations on slice"
license-file = "LICENSE"
readme = "README.md"
documentation = "https://docs.rs/heapp"
repository = "https://github.com/Jamyw7g/heapp"
keywords = ["heap", "algorithms", "slice"]
categories = ["algorithms", "no-standard-library"]
exclude = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

